--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,4 @@ jobs:
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GH_OAUTH }}
+        WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
