--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,18 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
+    env:
+      CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
+      WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
-    - name: Create Retail Package
-      run: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -p 290074 -a XrNk086a
-      env:
-        CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GH_OAUTH }}
-        WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Replace toc-versions
+        uses: Numynum/ToCVersions@master
+        with:
+          args: modules/*/*.toc *.toc
+
+      - name: Create Retail Package
+        uses: BigWigsMods/packager@master
