--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,14 @@ jobs:
       WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Replace toc-versions
-        uses: Numynum/ToCVersions@master
+        uses: NumyAddon/ToCVersions@v1
         with:
           args: modules/*/*.toc *.toc
 
       - name: Create Retail Package
-        uses: BigWigsMods/packager@master
+        uses: BigWigsMods/packager@v2
